src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/ANH KHOA/OneDrive - hcmut.edu.vn/Documents/a_HK6/PPL/assignment/assignment_3/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'&&'", "'||'", "'!'", "':='", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'.'", "'='", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "';'", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'getInt'", "'putInt'", "'putIntLn'", 
                     "'getFloat'", "'putFloat'", "'putFloatLn'", "'getBool'", 
                     "'putBool'", "'putBoolLn'", "'getString'", "'putString'", 
                     "'putStringLn'", "'putLn'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "RETURN", "FUNC", 
                      "TYPE", "STRUCT", "INTERFACE", "STRING", "INT", "FLOAT", 
                      "BOOLEAN", "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", 
                      "ADD", "SUBTRACT", "MULTIPLY", "DIVIDE", "MODULO", 
                      "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", 
                      "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "AND", "OR", 
                      "NOT", "SHORT_ASSIGN", "ADD_ASSIGN", "SUBTRACT_ASSIGN", 
                      "MULTIPLY_ASSIGN", "DIVIDE_ASSIGN", "MODULO_ASSIGN", 
                      "DOT", "ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "COMMA", "SEMICOLON", "COLON", 
                      "INT_LIT", "FLOAT_LIT", "STRING_LIT", "BOOL_LIT", 
                      "NIL_LIT", "IDENTIFIER", "NEWLINE", "WS", "SINGLE_LINE_COMMENT", 
                      "MULTI_LINE_COMMENT", "GETINT", "PUTINT", "PUTINTLN", 
                      "GETFLOAT", "PUTFLOAT", "PUTFLOATLN", "GETBOOL", "PUTBOOL", 
                      "PUTBOOLLN", "GETSTRING", "PUTSTRING", "PUTSTRINGLN", 
                      "PUTLN", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_inBlockStatement = 2
    RULE_declarationStatement = 3
    RULE_declaration = 4
    RULE_variableDeclaration = 5
    RULE_constantDeclaration = 6
    RULE_typeDeclaration = 7
    RULE_methodDeclaration = 8
    RULE_receiver = 9
    RULE_recType = 10
    RULE_functionDeclaration = 11
    RULE_block = 12
    RULE_assignmentStatement = 13
    RULE_assign_op = 14
    RULE_ifStatement = 15
    RULE_forStatement = 16
    RULE_forClause = 17
    RULE_initStmt = 18
    RULE_postStmt = 19
    RULE_condition = 20
    RULE_scalarAssignment = 21
    RULE_rangeClause = 22
    RULE_breakStatement = 23
    RULE_continueStatement = 24
    RULE_returnStatement = 25
    RULE_callStatement = 26
    RULE_expressionParts = 27
    RULE_expressionPart = 28
    RULE_expression = 29
    RULE_logicalExpr = 30
    RULE_higherLogicalExpr = 31
    RULE_relationalExpr = 32
    RULE_additiveExpr = 33
    RULE_multiplicativeExpr = 34
    RULE_unaryExpr = 35
    RULE_primaryExpr = 36
    RULE_selector = 37
    RULE_arguments = 38
    RULE_index = 39
    RULE_operand = 40
    RULE_basicLit = 41
    RULE_arrayLit = 42
    RULE_arrayValue = 43
    RULE_arrayElems = 44
    RULE_structLit = 45
    RULE_structvalue = 46
    RULE_fieldValue = 47
    RULE_arrayType = 48
    RULE_structType = 49
    RULE_fieldDeclarations = 50
    RULE_fieldDeclaration = 51
    RULE_interfaceType = 52
    RULE_interfaceElem = 53
    RULE_methodElem = 54
    RULE_parameter_type = 55
    RULE_rel_op = 56
    RULE_add_op = 57
    RULE_mul_op = 58
    RULE_unary_op = 59
    RULE_lhs = 60
    RULE_types = 61
    RULE_builtInFunctionCall = 62
    RULE_identifierList = 63
    RULE_expressionList = 64
    RULE_inBlockStatementList = 65
    RULE_declarationList = 66

    ruleNames =  [ "program", "statement", "inBlockStatement", "declarationStatement", 
                   "declaration", "variableDeclaration", "constantDeclaration", 
                   "typeDeclaration", "methodDeclaration", "receiver", "recType", 
                   "functionDeclaration", "block", "assignmentStatement", 
                   "assign_op", "ifStatement", "forStatement", "forClause", 
                   "initStmt", "postStmt", "condition", "scalarAssignment", 
                   "rangeClause", "breakStatement", "continueStatement", 
                   "returnStatement", "callStatement", "expressionParts", 
                   "expressionPart", "expression", "logicalExpr", "higherLogicalExpr", 
                   "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "primaryExpr", "selector", "arguments", 
                   "index", "operand", "basicLit", "arrayLit", "arrayValue", 
                   "arrayElems", "structLit", "structvalue", "fieldValue", 
                   "arrayType", "structType", "fieldDeclarations", "fieldDeclaration", 
                   "interfaceType", "interfaceElem", "methodElem", "parameter_type", 
                   "rel_op", "add_op", "mul_op", "unary_op", "lhs", "types", 
                   "builtInFunctionCall", "identifierList", "expressionList", 
                   "inBlockStatementList", "declarationList" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    RETURN=4
    FUNC=5
    TYPE=6
    STRUCT=7
    INTERFACE=8
    STRING=9
    INT=10
    FLOAT=11
    BOOLEAN=12
    CONST=13
    VAR=14
    CONTINUE=15
    BREAK=16
    RANGE=17
    ADD=18
    SUBTRACT=19
    MULTIPLY=20
    DIVIDE=21
    MODULO=22
    EQUAL=23
    NOT_EQUAL=24
    LESS_THAN=25
    LESS_THAN_OR_EQUAL=26
    GREATER_THAN=27
    GREATER_THAN_OR_EQUAL=28
    AND=29
    OR=30
    NOT=31
    SHORT_ASSIGN=32
    ADD_ASSIGN=33
    SUBTRACT_ASSIGN=34
    MULTIPLY_ASSIGN=35
    DIVIDE_ASSIGN=36
    MODULO_ASSIGN=37
    DOT=38
    ASSIGN=39
    LPAREN=40
    RPAREN=41
    LBRACE=42
    RBRACE=43
    LBRACKET=44
    RBRACKET=45
    COMMA=46
    SEMICOLON=47
    COLON=48
    INT_LIT=49
    FLOAT_LIT=50
    STRING_LIT=51
    BOOL_LIT=52
    NIL_LIT=53
    IDENTIFIER=54
    NEWLINE=55
    WS=56
    SINGLE_LINE_COMMENT=57
    MULTI_LINE_COMMENT=58
    GETINT=59
    PUTINT=60
    PUTINTLN=61
    GETFLOAT=62
    PUTFLOAT=63
    PUTFLOATLN=64
    GETBOOL=65
    PUTBOOL=66
    PUTBOOLLN=67
    GETSTRING=68
    PUTSTRING=69
    PUTSTRINGLN=70
    PUTLN=71
    UNCLOSE_STRING=72
    ILLEGAL_ESCAPE=73
    ERROR_CHAR=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationList(self):
            return self.getTypedRuleContext(MiniGoParser.DeclarationListContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.declarationList()
            self.state = 135
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def callStatement(self):
            return self.getTypedRuleContext(MiniGoParser.CallStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(MiniGoParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MiniGoParser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(MiniGoParser.ForStatementContext,0)


        def declarationStatement(self):
            return self.getTypedRuleContext(MiniGoParser.DeclarationStatementContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_statement




    def statement(self):

        localctx = MiniGoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 137
                self.callStatement()
                pass

            elif la_ == 2:
                self.state = 138
                self.assignmentStatement()
                pass

            elif la_ == 3:
                self.state = 139
                self.ifStatement()
                pass

            elif la_ == 4:
                self.state = 140
                self.forStatement()
                pass

            elif la_ == 5:
                self.state = 141
                self.declarationStatement()
                pass


            self.state = 144
            self.match(MiniGoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InBlockStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def returnStatement(self):
            return self.getTypedRuleContext(MiniGoParser.ReturnStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(MiniGoParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(MiniGoParser.ContinueStatementContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_inBlockStatement




    def inBlockStatement(self):

        localctx = MiniGoParser.InBlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inBlockStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.state = 146
                self.returnStatement()
                pass
            elif token in [16]:
                self.state = 147
                self.breakStatement()
                pass
            elif token in [15]:
                self.state = 148
                self.continueStatement()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self.match(MiniGoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(MiniGoParser.VariableDeclarationContext,0)


        def constantDeclaration(self):
            return self.getTypedRuleContext(MiniGoParser.ConstantDeclarationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declarationStatement




    def declarationStatement(self):

        localctx = MiniGoParser.DeclarationStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarationStatement)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.variableDeclaration()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.constantDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def variableDeclaration(self):
            return self.getTypedRuleContext(MiniGoParser.VariableDeclarationContext,0)


        def constantDeclaration(self):
            return self.getTypedRuleContext(MiniGoParser.ConstantDeclarationContext,0)


        def typeDeclaration(self):
            return self.getTypedRuleContext(MiniGoParser.TypeDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(MiniGoParser.FunctionDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(MiniGoParser.MethodDeclarationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declaration




    def declaration(self):

        localctx = MiniGoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 157
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.state = 158
                self.constantDeclaration()
                pass

            elif la_ == 3:
                self.state = 159
                self.typeDeclaration()
                pass

            elif la_ == 4:
                self.state = 160
                self.functionDeclaration()
                pass

            elif la_ == 5:
                self.state = 161
                self.methodDeclaration()
                pass


            self.state = 164
            self.match(MiniGoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def types(self):
            return self.getTypedRuleContext(MiniGoParser.TypesContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_variableDeclaration




    def variableDeclaration(self):

        localctx = MiniGoParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(MiniGoParser.VAR)
                self.state = 167
                self.match(MiniGoParser.IDENTIFIER)
                self.state = 168
                self.types()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==39:
                    self.state = 169
                    self.match(MiniGoParser.ASSIGN)
                    self.state = 170
                    self.expression()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(MiniGoParser.VAR)
                self.state = 174
                self.match(MiniGoParser.IDENTIFIER)
                self.state = 175
                self.match(MiniGoParser.ASSIGN)
                self.state = 176
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_constantDeclaration




    def constantDeclaration(self):

        localctx = MiniGoParser.ConstantDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constantDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(MiniGoParser.CONST)
            self.state = 180
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 181
            self.match(MiniGoParser.ASSIGN)
            self.state = 182
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def structType(self):
            return self.getTypedRuleContext(MiniGoParser.StructTypeContext,0)


        def interfaceType(self):
            return self.getTypedRuleContext(MiniGoParser.InterfaceTypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_typeDeclaration




    def typeDeclaration(self):

        localctx = MiniGoParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(MiniGoParser.TYPE)
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 185
                self.structType()
                pass

            elif la_ == 2:
                self.state = 186
                self.interfaceType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MiniGoParser.FUNC, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.LPAREN)
            else:
                return self.getToken(MiniGoParser.LPAREN, i)

        def receiver(self):
            return self.getTypedRuleContext(MiniGoParser.ReceiverContext,0)


        def recType(self):
            return self.getTypedRuleContext(MiniGoParser.RecTypeContext,0)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.RPAREN)
            else:
                return self.getToken(MiniGoParser.RPAREN, i)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def block(self):
            return self.getTypedRuleContext(MiniGoParser.BlockContext,0)


        def parameter_type(self):
            return self.getTypedRuleContext(MiniGoParser.Parameter_typeContext,0)


        def types(self):
            return self.getTypedRuleContext(MiniGoParser.TypesContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_methodDeclaration




    def methodDeclaration(self):

        localctx = MiniGoParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(MiniGoParser.FUNC)
            self.state = 190
            self.match(MiniGoParser.LPAREN)
            self.state = 191
            self.receiver()
            self.state = 192
            self.recType()
            self.state = 193
            self.match(MiniGoParser.RPAREN)
            self.state = 194
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 195
            self.match(MiniGoParser.LPAREN)
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 196
                self.parameter_type()

